--- a/fast_lio2/CMakeLists.txt
+++ b/fast_lio2/CMakeLists.txt
@@ -121,7 +121,7 @@ install(TARGETS fastlio_mapping
 )
 
 install(
-  DIRECTORY config launch rviz
+  DIRECTORY config launch
   DESTINATION share/${PROJECT_NAME}
 )
 
